agregando etiquetas de contenido

--- a/C3 HTML/practica1.html
+++ b/C3 HTML/practica1.html
@@ -9,19 +9,22 @@
     <header>
         <h1>Este es el titulo principal de mi página web.</h1>
    <select name="" id="">
-    <option value="">
+    <option href="./index.html" value="">
     <span>HOME</span>    
     </option>
     <option value="">
         <span>Noticias</span>
     </option>
     <option value="">
-        <span>Información</span>
+        <span>Información </span>
     </option>
    </select>
     </header>
       
     <main>
+
+        <img src="./pajarito.png"/>
+
         <section>
             <h2>Este es un titulo de una sección de noticias.</h2>
             <article>                
@@ -97,8 +100,6 @@
 
                
         </p>
-        <span>Enlace 1</span>
-        <span>Enlace 2</span>
-        <span>Enlace 3</span>
+        <a href="./contacto.html">Formulario de Contacto</a>
     </footer>
 </html>
