--- a/C3 HTML/practica1.html
+++ b/C3 HTML/practica1.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practica 1</title>
 </head>
-<body>
+<body style="background-color: aqua;">
     <header>
-        <h1>Este es el titulo principal de mi página web.</h1>
+        <h1 style="color: red;">Este es el titulo principal de mi página web.</h1>
    <select name="" id="">
     <option href="./index.html" value="">
     <span>HOME</span>    
