--- a/C4 CSS/presentación.html
+++ b/C4 CSS/presentación.html
@@ -8,30 +8,30 @@
 </head>
 <body>
     <header>
-        <h1>Mi Portfolio</h1>
-        <h2>Ivana Romero Treppo</h2>
+        <h1 class="title" id="principal">Mi Portfolio</h1>
+        <h2 class="minombre">Ivana Romero Treppo</h2>
     </header>
    <main>
         <article>
-            <h3>Fullstack Developer</h3>
+            <h3 class="title">Fullstack Developer</h3>
             <p>Soy Abogada, actualmente estoy cursando la carrrera de Analista de Sistemas.</p>
         </article>
         <article>
             <div>
-             <h3>HTML</h3>
-             <img src="./img/html.png" />
+             <h3 class="title">HTML</h3>
+             <img src="./img/html.png" class="logo"/>
             </div>
         </article>
         <article>
             <div>
-             <h3>CSS</h3>
-             <img src="./img/css.png" />
+             <h3 class="title">CSS</h3>
+             <img src="./img/css.png" class="logo" id="tamaño"/>
             </div>
         </article>
         <article>
             <div>
-             <h3>Javascript</h3>
-             <img src="./img/javascript.jpeg" />
+             <h3 class="title">Javascript</h3>
+             <img src="./img/javascript.jpeg" class="logo"/>
             </div>
         </article>
    </main>
